# erc20-cu

./: README.md  justfile  pyproject.toml
contracts/: snek_token.vy
contracts/sub_lesson/: stateful_fuzz_solvable.vy  stateless_fuzz_solvable.vy
script/: deploy.py
tests/: test_token.py
tests/sub_lesson/: test_stateful.py  test_stateless.py
