[project]
name = "moccasin_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.moccasin.project]
src = "contracts"
dependencies = ["snekmate"]

[dependency-groups]
dev = [
    "mamushi>=0.0.4",
    "ruff>=0.8.6",
]
